Changes made to transfer money, pay loan,transaction list bg image, wallet home

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -302,6 +302,13 @@
         <item>After 3 months</item>
         <item>After 6 months</item>
     </string-array>
+    <string-array name="transfer_to">
+        <item>Select</item>
+        <item>eMaisha Account</item>
+        <item>eMaisha Card</item>
+        <item>Mobile Number</item>
+        <item>Bank</item>
+    </string-array>
 
     <string-array name="crop_havest_units">
         <item>Select</item>
