--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -596,4 +596,5 @@
     <string name="internet_connection_error">check your internet connection and try again</string>
     <string name="iv">98765432</string>
     <string name="AddPersonalInformation">Personal Information</string>
+    <string name="select_product_weight">Select product weight first!</string>
 </resources>
