--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="title_livestock_records">Livestock Records</string>
     <string name="filter_by">Filter By :</string>
 
+    <string name="search_here">Search Here</string>
+
 
     <string name="lorem_ipsum">
         No Minimum Order - Order in for yourself or for the group, with no restrictions.
@@ -338,12 +340,134 @@
     <string name="date">Date</string>
 
     <!--    Arrays to test Sign Up with District, Sub-County and Village-->
+    <string name="default_shipping_method">Boda Boda</string>
+
+    <string name="cash_on_delivery">Cash on delivery</string>
+
+    <string name="visa_card">Visa / Master Card</string>
+
+    <string name="mobile_money">Mobile Money</string>
+
+    <string name="emaisha_card">eMaisha Card</string>
+
+    <string name="btn_continue_payment">Continue Payment</string>
+    <string name="payment_methods">Payment Methods</string>
+    <string name="order_summary">Order Summary</string>
+    <string name="promo_code">Promo Code</string>
+    <string name="default_old_price"><strike>UGX 45.00</strike></string>
+    <string name="review_list">Review List</string>
+    <string name="payMerchant">Pay Merchant</string>
+    <string name="per_month">per month</string>
+    <string name="per_after3months">after 3 months</string>
+    <string name="per_after6months">after 6 months</string>
+    <string name="days">days</string>
+    <string name="weeks">weeks</string>
+    <string name="months">months</string>
+    <string name="quarteryear">quarter years</string>
+    <string name="halfyear">half years</string>
+    <string name="default_crop_area_units">Acres</string>
+    <string name="crop_protection">Pesticides/Crop Protection</string>
+    <string name="equipments">Equipment</string>
+    <string name="units">Units</string>
+    <string name="per_unit">/ Unit</string>
+    <string name="save_changes">Save</string>
+    <string name="transfer">Transfer</string>
+    <string name="withdraw">Withdraw</string>
+    <string name="add_money">Add Money</string>
+    <string name="authenticate">Authenticate</string>
+    <string name="harvest_units">Harvest Units</string>
+    <string name="field_size">Field Size</string>
+    <string name="title_activity_loan_status_preview" translatable="false">My Loan</string>
+
+
+    <string name="expected_yield">Expected Yield</string>
+    <string name="expected_yield_per_ha">Expected Yield/ha</string>
+    <string name="my_wallet" translatable="false">eMaisha Pay</string>
+    <string name="deposit" translatable="false">Deposit</string>
+
+    <string name="addmoney" translatable="false">ADD MONEY</string>
+    <string name="current_balance_label" translatable="false">Wallet Balance</string>
+    <string name="comfirm_purchase" translatable="false">Confirm Payment</string>
+
+    <string name="pin" translatable="false">PIN</string>
+    <string name="previous">Previous</string>
+    <string name="submit">Submit</string>
+    <string name="label_wallet">Wallet</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="label_marketplace">Market Place</string>
+
+    <string name="label_services">Services</string>
+
+    <string name="humidity">Humidity</string>
+
+    <string name="wind">Wind</string>
+    <string name="visibility">Visibility</string>
+    <string name="rain">Rain</string>
+    <string name="humidity_default">48% Max</string>
+    <string name="rain_default">No</string>
+    <string name="visibility_default">25Km</string>
+    <string name="wind_default">12m/h</string>
+    <string name="humidity_default2">30.9% Min</string>
+
+    <string name="day">Wednesday</string>
+    <string name="temp_max">32.6&#xb0;C Max</string>
+    <string name="temp_min">16.8&#xb0;C Min</string>
+
+    <string name="crop">Crop</string>
+    <string name="label_confirm">Comfirm</string>
+    <string name="variety">Variety</string>
+    <string name="sponsors" translatable="false">Cabral Tech Ltd</string>
+    <string name="tax"> Tax </string>
+    <string name="shipping"> Exp.Delivery Charge</string>
+    <string name="discount"> Discount </string>
+    <string name="subtotal"> Subtotal </string>
+    <string name="total"> Total </string>
+    <string name="coupon"> Coupon </string>
+    <string name="coupon_code"> Coupon Code </string>
+    <string name="coupon_amount"> Coupon Amount </string>
+    <string name="coupon_discount"> Coupon Discount </string>
+    <string name="coupon_type"> Coupon Type </string>
+    <string name="sample_coupons"> Sample Coupon Codes </string>
+    <string name="payment_method"> Payment Method </string>
+    <string name="payment_details"> Payment Details </string>
+    <string name="card_number"> Card Number </string>
+
+
+    <string name="expiry_month"> Expiry Month </string>
+
+
+    <string name="expiry_year"> Expiry Year </string>
+    <string name="card_expiry"> Card Expiry </string>
+    <string name="card_cvv"> Card CVV </string>
+    <string name="payPal"> PayPal </string>
+    <string name="billing_address"> Billing Address </string>
+    <string name="shipping_address"> Delivery Address </string>
+    <string name="shipping_method"> Delivery Method </string>
+    <string name="default_numeric_value">0</string>
+    <string name="fertilizer_title">Fertilizer</string>
+    <string name="seeds">Seeds</string>
+    <string name="transactions">Transactions</string>
+    <string name="invalid_number">Invalid Number</string>
+    <string name="invalid_expiry">Invalid Expiry</string>
+    <string name="purchase_date">Purchase Date</string>
+    <string name="title_activity_card_detail">CardDetail</string>
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="title_activity_wallet_buy_sell">eMaisha Shop</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="internet_connection_error">check your internet connection and try again</string>
+    <string name="iv">98765432</string>
+    <string name="AddPersonalInformation">Personal Information</string>
+    <string name="select_product_weight">Select product weight first!</string>
     <string-array name="spinner_gender">
         <item>Gender</item>
         <item>Male</item>
         <item>Female</item>
     </string-array>
-
     <string-array name="spinner_district">
         <item>District</item>
         <item>Kampala</item>
@@ -372,7 +496,6 @@
         <item>Guardian</item>
         <item>Wife</item>
     </string-array>
-
     <string-array name="loan_farming_details_crops_list">
         <item>Select</item>
         <item>Beans</item>
@@ -394,43 +517,7 @@
         <item>Yes</item>
         <item>No</item>
     </string-array>
-    <string name="default_shipping_method">Boda Boda</string>
-    <string name="cash_on_delivery">Cash on delivery</string>
-    <string name="visa_card">Visa / Master Card</string>
-    <string name="mobile_money">Mobile Money</string>
-    <string name="emaisha_card">eMaisha Card</string>
-    <string name="btn_continue_payment">Continue Payment</string>
-    <string name="payment_methods">Payment Methods</string>
-    <string name="order_summary">Order Summary</string>
-    <string name="promo_code">Promo Code</string>
-    <string name="default_old_price"><strike>UGX 45.00</strike></string>
-    <string name="review_list">Review List</string>
-    <string name="payMerchant">Pay Merchant</string>
-    <string name="per_month">per month</string>
-    <string name="per_after3months">after 3 months</string>
-    <string name="per_after6months">after 6 months</string>
-    <string name="days">days</string>
-    <string name="weeks">weeks</string>
-    <string name="months">months</string>
-    <string name="quarteryear">quarter years</string>
-    <string name="halfyear">half years</string>
-    <string name="default_crop_area_units">Acres</string>
-    <string name="crop_protection">Pesticides/Crop Protection</string>
-    <string name="equipments">Equipment</string>
-    <string name="units">Units</string>
-    <string name="per_unit">/ Unit</string>
-    <string name="save_changes">Save</string>
-
-
-    <string name="transfer">Transfer</string>
-    <string name="withdraw">Withdraw</string>
-    <string name="add_money">Add Money</string>
-    <string name="authenticate">Authenticate</string>
-
-    <string name="harvest_units">Harvest Units</string>
-    <string name="field_size">Field Size</string>
-    <string name="title_activity_loan_status_preview" translatable="false">My Loan</string>
-
+    <!-- Strings used for fragments for navigation -->
     <string-array name="loan_durations">
         <item>Daily</item>
         <item>Weekly</item>
@@ -445,6 +532,7 @@
         <item>Mobile Money</item>
         <item>Bank</item>
     </string-array>
+
     <string-array name="deposit_to">
         <item>Select</item>
         <item>Wallet</item>
@@ -466,14 +554,12 @@
         <item>Litres</item>
         <item>Tones</item>
     </string-array>
-
     <string-array name="market_price_crops_list">
         <item>Select Crop</item>
         <item>Ginger</item>
         <item>Millet</item>
         <item>Milk</item>
     </string-array>
-
     <string-array name="crop_havest_units">
         <item>Select</item>
         <item>Boxes</item>
@@ -483,72 +569,6 @@
         <item>Bags</item>
         <item>Bunches</item>
     </string-array>
-
-    <string name="expected_yield">Expected Yield</string>
-    <string name="expected_yield_per_ha">Expected Yield/ha</string>
-    <string name="my_wallet" translatable="false">eMaisha Pay</string>
-    <string name="deposit" translatable="false">Deposit</string>
-    <string name="addmoney" translatable="false">ADD MONEY</string>
-    <string name="current_balance_label" translatable="false">Wallet Balance</string>
-    <string name="comfirm_purchase" translatable="false">Confirm Payment</string>
-    <string name="pin" translatable="false">PIN</string>
-
-    <string name="previous">Previous</string>
-    <string name="submit">Submit</string>
-    <string name="label_wallet">Wallet</string>
-
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="label_marketplace">Market Place</string>
-    <string name="label_services">Services</string>
-    <string name="humidity">Humidity</string>
-    <string name="wind">Wind</string>
-    <string name="visibility">Visibility</string>
-    <string name="rain">Rain</string>
-    <string name="humidity_default">48% Max</string>
-    <string name="rain_default">No</string>
-    <string name="visibility_default">25Km</string>
-    <string name="wind_default">12m/h</string>
-    <string name="humidity_default2">30.9% Min</string>
-    <string name="day">Wednesday</string>
-    <string name="temp_max">32.6&#xb0;C Max</string>
-    <string name="temp_min">16.8&#xb0;C Min</string>
-    <string name="crop">Crop</string>
-    <string name="label_confirm">Comfirm</string>
-    <string name="variety">Variety</string>
-
-
-    <string name="sponsors" translatable="false">Cabral Tech Ltd</string>
-
-
-    <string name="tax"> Tax </string>
-    <string name="shipping"> Exp.Delivery Charge</string>
-    <string name="discount"> Discount </string>
-    <string name="subtotal"> Subtotal </string>
-    <string name="total"> Total </string>
-    <string name="coupon"> Coupon </string>
-    <string name="coupon_code"> Coupon Code </string>
-    <string name="coupon_amount"> Coupon Amount </string>
-    <string name="coupon_discount"> Coupon Discount </string>
-    <string name="coupon_type"> Coupon Type </string>
-    <string name="sample_coupons"> Sample Coupon Codes </string>
-    <string name="payment_method"> Payment Method </string>
-    <string name="payment_details"> Payment Details </string>
-    <string name="card_number"> Card Number </string>
-    <string name="expiry_month"> Expiry Month </string>
-    <string name="expiry_year"> Expiry Year </string>
-    <string name="card_expiry"> Card Expiry </string>
-    <string name="card_cvv"> Card CVV </string>
-    <string name="payPal"> PayPal </string>
-    <string name="billing_address"> Billing Address </string>
-    <string name="shipping_address"> Delivery Address </string>
-    <string name="shipping_method"> Delivery Method </string>
-    <string name="default_numeric_value">0</string>
-    <string name="fertilizer_title">Fertilizer</string>
-    <string name="seeds">Seeds</string>
-    <string name="transactions">Transactions</string>
-    <string name="invalid_number">Invalid Number</string>
-    <string name="invalid_expiry">Invalid Expiry</string>
-    <string name="purchase_date">Purchase Date</string>
 
     <string-array name="sortBy_array">
         <item> Newest </item>
@@ -560,7 +580,6 @@
         <item> Special Deals </item>
         <item> Most Liked </item>
     </string-array>
-
     <string-array name="crop_add_produce">
         <item> Crop</item>
         <item>Tomatoes</item>
@@ -568,7 +587,6 @@
         <item>Cassava</item>
         <item>Irish</item>
     </string-array>
-
     <string-array name="buy_produce_quantity">
         <item>750 ml - Bottle</item>
         <item>700 ml - Bottle</item>
@@ -581,20 +599,4 @@
         <item>Passport</item>
         <item>Driving Permit</item>
     </string-array>
-    <string name="title_activity_card_detail">CardDetail</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="title_activity_wallet_buy_sell">eMaisha Shop</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
-
-    <string name="internet_connection_error">check your internet connection and try again</string>
-    <string name="iv">98765432</string>
-    <string name="AddPersonalInformation">Personal Information</string>
-    <string name="select_product_weight">Select product weight first!</string>
 </resources>
