--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -532,6 +532,11 @@
         <item>Mobile Money</item>
         <item>Bank</item>
     </string-array>
+    <string-array name="settle_to">
+        <item>Select</item>
+        <item>Mobile Money</item>
+        <item>Bank</item>
+    </string-array>
 
     <string-array name="deposit_to">
         <item>Select</item>
@@ -599,25 +604,7 @@
         <item>Passport</item>
         <item>Driving Permit</item>
     </string-array>
-    <string name="title_activity_card_detail">CardDetail</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="title_activity_wallet_buy_sell">eMaisha Shop</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
-
-    <string name="internet_connection_error">check your internet connection and try again</string>
-    <string name="iv">98765432</string>
-    <string name="AddPersonalInformation">Personal Information</string>
-    <string name="select_product_weight">Select product weight first!</string>
-<<<<<<< HEAD
     <string name="settlements">Settlements</string>
-=======
     <string name="settle">Settle</string>
->>>>>>> e3fd6cf98acedb335363819015bea8b57f3f0ed6
 </resources>
