--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -606,7 +606,7 @@
 
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
-
+    <string name="all_product">All Products</string>
     <!-- Strings used for fragments for navigation -->
 
 
