--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -764,4 +764,26 @@
     <string name="select_product_weight">Select product weight first!</string>
     <string name="settlements">Settlements</string>
     <string name="settle">Settle</string>
+    <string name="type_of_birds">Type of Birds</string>
+    <string name="date_of_hatch">Date of Hatch</string>
+    <string name="date_purchased">Date Purchased</string>
+    <string name="cost_per_chick">Cost Per Chick</string>
+    <string name="source">Source</string>
+    <string name="expected_disposal">Expected Disposal</string>
+    <string name="housing_system">Housing System</string>
+    <string name="records_kept">Records Kept</string>
+    <string name="source_of_feeds">Source of Feeds</string>
+    <string name="experience">Experience</string>
+    <string name="years">Years</string>
+    <string name="farm_vet_personnel">Farm Vet Personnel</string>
+    <string name="vet_first_name">Vet First Name</string>
+    <string name="second_name">Second Name</string>
+    <string name="qualifications">Qualifications</string>
+    <string name="vet_phone_number">Vet Phone Number</string>
+    <string name="loan_purpose">Loan Purpose</string>
+    <string name="business_model">Business Model</string>
+    <string name="total_animals">Total Animals</string>
+    <string name="females">Females</string>
+    <string name="males">Males</string>
+    <string name="annual_revenue">Annual Revenue</string>
 </resources>
