Edited selection and display of units in add product

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -738,7 +738,7 @@
         <item>Bank Cards</item>
     </string-array>
     <string-array name="crop_quantity_unit">
-        <item> Unit</item>
+        <item> Select</item>
         <item>Kg</item>
         <item>Boxes</item>
         <item>Litres</item>
