--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -669,6 +669,25 @@
     <string name="search_shop_location">Search Shop Location</string>
     <string name="measuremets">Measurements</string>
     <string name="emaishaAccount">eMaisha Pay Account</string>
+    <string name="number_one">1</string>
+    <string name="number_two">2</string>
+    <string name="number_three">3</string>
+    <string name="number_four">4</string>
+    <string name="number_five">5</string>
+    <string name="number_six">6</string>
+    <string name="number_seven">7</string>
+    <string name="number_eight">8</string>
+    <string name="number_nine">9</string>
+    <string name="btn_clear">Clear</string>
+    <string name="number_zero">0</string>
+    <string name="btn_backspace">Back</string>
+    <string name="pay_description">
+        You want to pay or get paid?
+        We are fast and safe.</string>
+    <string name="get_credit">GET CREDIT</string>
+    <string name="get_credit_description">You want to get a loan? We are quick and cheap.</string>
+    <string name="shop">SHOP</string>
+    <string name="shop_description">You want to buy quality Agro-inputs We are affordable, accessible and reliable</string>
     <string-array name="spinner_gender">
         <item>Gender</item>
         <item>Male</item>
