--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -692,7 +692,7 @@
     <string name="AddReview">Add Review</string>
     <string name="create_pin">Create PIN</string>
     <string name="enter_pin">Enter Pin</string>
-    <string name="comfirm_pin">Comfirm PIN</string>
+    <string name="confirm_pin">Confirm PIN</string>
     <string-array name="spinner_gender">
         <item>Gender</item>
         <item>Male</item>
