--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -693,6 +693,7 @@
     <string name="create_pin">Create PIN</string>
     <string name="enter_pin">Enter Pin</string>
     <string name="confirm_pin">Confirm PIN</string>
+    <string name="orders">Orders</string>
     <string-array name="spinner_gender">
         <item>Gender</item>
         <item>Male</item>
