--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -773,6 +773,7 @@
         <item>Select</item>
     </string-array>
     <string-array name="payment_method">
+        <item>Select</item>
         <item>Wallet</item>
         <item>eMaisha Card</item>
         <item>Mobile Money</item>
