--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -696,6 +696,7 @@
     <string name="orders">Orders</string>
     <string name="update_product">update</string>
     <string name="add_new_product">add</string>
+    <string name="product_successfully_updated">product successfully updated</string>
     <string-array name="spinner_gender">
         <item>Gender</item>
         <item>Male</item>
