--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -697,6 +697,7 @@
     <string name="update_product">update</string>
     <string name="add_new_product">add</string>
     <string name="product_successfully_updated">product successfully updated</string>
+    <string name="date_format_preffered">dd/LL/yyyy</string>
     <string-array name="spinner_gender">
         <item>Gender</item>
         <item>Male</item>
