Add Shop Product  validation fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -698,6 +698,7 @@
     <string name="add_new_product">add</string>
     <string name="product_successfully_updated">product successfully updated</string>
     <string name="date_format_preffered">dd/LL/yyyy</string>
+    <string name="product_manfacturer_is_empty">Manufacturer is  required</string>
     <string-array name="spinner_gender">
         <item>Gender</item>
         <item>Male</item>
