--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -700,6 +700,7 @@
     <string name="date_format_preffered">dd/LL/yyyy</string>
     <string name="product_manfacturer_is_empty">Manufacturer is  required</string>
     <string name="role_master_agent">Agent</string>
+    <string name="phone_number_code">0</string>
     <string-array name="spinner_gender">
         <item>Gender</item>
         <item>Male</item>
