Agent send, Deposit and Withdraw

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -701,6 +701,7 @@
     <string name="product_manfacturer_is_empty">Manufacturer is  required</string>
     <string name="role_master_agent">Agent</string>
     <string name="phone_number_code">0</string>
+    <string name="confirm_customer_details">Confirm Customer Details</string>
     <string-array name="spinner_gender">
         <item>Gender</item>
         <item>Male</item>
