Terms and conditions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -910,5 +910,12 @@
         <item>Uganda</item>
     </string-array>
 
+    <string name="termsandconditions">Welcome to eMaisha Pay, a product that provides a platform where payments for various goods and services especially in the agricultural value chain can be made, and Credit for businesses can be accessed.\rThese include but are not limited to payments for product purchases, bill and insurance payments, airtime for mobile networks, internet and television subscriptions, credit access among others.
+This User Agreement is effective upon acceptance for all users. Nothing in this Agreement shall be deemed to confer any third-party rights or benefits.
+Before you use eMaisha Pay’s web/app payment and credit service, you must read and accept all of the terms in, and linked to, this User Agreement and the eMaisha pay Privacy Policy.
+</string>
+    <string name="checkbox_text">I agree to the <b>Terms of Service</b> and <b>Privacy Policy</b></string>
+    <string name="click_here_text">Click <b>here</b> to view the complete Terms of Service and Privacy Policy</string>
+
 
 </resources>
