--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -887,7 +887,7 @@
     <string-array name="spinner_accept_payments_methods">
         <item>Select</item>
         <item>eMaisha Pay</item>
-        <item>Mobile Money</item>
+<!--        <item>Mobile Money</item>-->
     </string-array>
 
     <string-array name="spinner_first_security_questions">
