--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -924,5 +924,8 @@ Before you use eMaisha Pay’s web/app payment and credit service, you must read
     <string name="change_pin">change pin</string>
     <string name="none">None</string>
 
+        <string name="loading">Loading</string>
+        <string name="no_results">No results 😓</string>
+        <string name="unknown">\?</string>
 
 </resources>
