modified transaction view holder

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -927,5 +927,7 @@ Before you use eMaisha Pay’s web/app payment and credit service, you must read
     <string name="loading">Loading</string>
     <string name="no_results">No results 😓</string>
     <string name="unknown">\?</string>
+    <string name="yes">yes</string>
+    <string name="no">no</string>
 
 </resources>
